Layout encaminhado. Falta verificar opção de tipo de coligação: Presidencial, Gov Estadual, Dep Federal, senado, etc

--- a/index.html
+++ b/index.html
@@ -127,16 +127,9 @@
   <!-- Conteúdo Principal -->
   <section id="main_content" class="container-fluid">
     <div class="col-sm-12 col-md-3">
-      <div class="col-xs-12 div-botao-eleicao center-block">
-        <div class="input-group">
-          <div class="input-group-btn">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Eleição <span class="botao-ano">2014</span>&nbsp;<span class="caret"></span></button>
-            <ul class="dropdown-menu">
-              <li><a class="link-ano" href="#ano/2014">Eleição 2014</a></li>
-              <li><a class="link-ano" href="#ano/2012">Eleição 2012</a></li>
-            </ul>
-          </div><!-- /btn-group-->
-        </div><!-- /input-group-->
+      <div class="col-xs-12 div-botao-eleicao center-block"><label>Eleição:</label>
+        <button type="button" id="btn2012" class="botao-ano btn btn-default btn-sm" value="2012">2012</button>
+        <button type="button" id="btn2014" class="botao-ano btn btn-primary btn-sm" value="2014">2014</button>
       </div>
       <div class="col-xs-3 text-left">1</div>
       <div class="col-xs-6 text-center">Partidos</div>
