Adicionando botões de cargos e ajustando o funcionamento dos botões

--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
   <!-- Conteúdo Principal -->
   <section id="main_content" class="container-fluid">
     <div class="col-sm-12 col-md-3">
+      <div class="col-xs-12 div-botao-cargo center-block"><label>Cargo:</label>
+        <button type="button" disabled id="btnPrefeito" class="botao-cargo btn btn-default btn-sm" value="Prefeito">Prefeito</button>
+        <button type="button" disabled id="btnGovernador" class="botao-cargo btn btn-primary btn-sm" value="Governador">Governador</button>
+      </div>
       <div class="col-xs-12 div-botao-eleicao center-block"><label>Eleição:</label>
+        <button type="button" id="btn2010" class="botao-ano btn btn-default btn-sm" value="2010">2010</button>
         <button type="button" id="btn2012" class="botao-ano btn btn-default btn-sm" value="2012">2012</button>
         <button type="button" id="btn2014" class="botao-ano btn btn-primary btn-sm" value="2014">2014</button>
       </div>
@@ -168,11 +173,9 @@
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="js/jquery.min.js"></script>
-  <!--script src="js/jquery.min.map"></script-->
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
-  <script type="text/javascript" src="js/dimple.v2.0.0.min.js"></script>
   <script src="js/signals.min.js"></script>
   <script src="js/crossroads.js"></script>
   <script src="js/estadaodados.js"></script>
