--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
                 <li role="presentation"><a href="/coligacoes">Coligações</a></li>
                 <li role="presentation"><a href="/cotas">Cotas</a></li>
                 <li role="presentation"><a href="/cruzador">Cruzador de Opiniões</a></li>
+                <li role="presentation"><a href="/fuvest2013">Eleições 2012</a></li>
                 <li role="presentation"><a href="/eleicoes2012">Eleições 2012</a></li>
                 <li role="presentation"><a href="/ideb">IDEB</a></li>
                 <li role="presentation"><a href="/intencaodevoto">Intenção de Voto</a></li>
-                <li role="presentation"><a href="/piramide_eleitoral">Pirâmide Eleitoral</a></li>
                 <li role="presentation"><a href="/quespvcquer">Que SP vc quer?</a></li>
+                <li role="presentation"><a href="/perfil_eleitorado">Perfil do Eleitorado</a></li>
+                <li role="presentation"><a href="/piramide_eleitoral">Pirâmide Eleitoral</a></li>
                 <li role="presentation"><a href="/religiao">Religiões</a></li>
                 <li role="presentation"><a href="/ringue2014">Ringue 2014</a></li>
                 <li role="presentation"><a href="/santamaria">Santa Maria</a></li>
