Hidding years not yet working

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <button type="button" disabled id="btnGovernador" class="botao-cargo btn btn-primary btn-sm" value="Governador">Governador</button>
       </div>
       <div class="col-xs-12 div-botao-eleicao center-block"><label>Eleição:</label>
-        <button type="button" id="btn2010" class="botao-ano btn btn-default btn-sm" value="2010">2010</button>
-        <button type="button" id="btn2012" class="botao-ano btn btn-default btn-sm" value="2012">2012</button>
+        <!--button type="button" id="btn2010" class="botao-ano btn btn-default btn-sm" value="2010">2010</button>
+        <button type="button" id="btn2012" class="botao-ano btn btn-default btn-sm" value="2012">2012</button-->
         <button type="button" id="btn2014" class="botao-ano btn btn-primary btn-sm" value="2014">2014</button>
       </div>
       <div class="col-xs-3 text-left">1</div>
